# gnn_memory_management

./: .gitignore  CMakeLists.txt  README.md  check_log_softmax.py  check_result.py  cnpy_marcel.cpp  create_spmm_example.py  cublas.cu  gen_ivy.py  gen_random_data.py  kickstart.cu  preprocess_data.py  profile_layers.sh  read_tensors.cpp  transpose.py  xtensor.cpp
benchmark/: CMakeLists.txt  add.cpp  alzheimer.cpp  benchmark.cpp  dropout.cpp  elizabeth.cpp  feature_aggregation.cpp  graph_convolution.cpp  layer.cpp  linear.cpp  log_softmax.cpp  relu.cpp  sage_linear.cpp  sparse_computation.cpp
include/: activation.hpp  adam.hpp  add.hpp  alzheimer.hpp  axdy.h  axpby.h  chunk.hpp  chunking.hpp  cuda_helper.hpp  dataset.hpp  dense_computation.hpp  divmv.h  dropout.hpp  feature_aggregation.hpp  gpu_memory.hpp  gpu_memory_logger.hpp  graph_convolution.hpp  invsqrt.h  layer.hpp  linear.hpp  log_softmax.hpp  loss.hpp  memory.hpp  memory_model.hpp  pipeline.hpp  relu.hpp  sage_convolution.hpp  sage_linear.hpp  sparse_computation.hpp  tensors.hpp  transpose.cuh
include/alzheimer/: activation.hpp  cuda_helper.hpp  divmv.h  dropout.hpp  elesq.h  graph_convolution.hpp  layer.hpp  linear.hpp  loss.hpp  mmio.h  mmio_wrapper.h  mmio_wrapper.hpp  sage_linear.hpp  tensors.hpp
playground/: a.cpp  a.out  arr_obj.cpp  b.cpp  class.cpp  copy.cpp  create_mat.py  cublas.cpp  dynamic_casting.cpp  eigen.cpp  json.cpp  kickstart.cpp  kickstart.cu  linear_grads.py  long.cpp  mem.cpp  nested_class.cpp  offset.cpp  rand.cpp  spmm_example.cpp  string_compare.cpp  struct_param.cpp  tensors.cpp  tensors.hpp  thread.cpp  vec.cpp  xtensor.cpp
src/: activation.cpp  adam.cpp  add.cpp  alzheimer.cpp  alzheimer_chunked.cpp  axdy.cu  axpby.cu  benchmark.cpp  chunk.cpp  chunking.cpp  cublas.cpp  cublas.cu  cuda_helper.cpp  dataset.cpp  dense_computation.cpp  divmv.cu  dropout.cpp  dropout.cpp.backup  elesq.cu  elizabeth.cpp  feature_aggregation.cpp  gpu_memory.cpp  gpu_memory_logger.cpp  graph_convolution.cpp  invsqrt.cu  kickstart.cpp  layer.cpp  linear.cpp  log_softmax.cpp  loss.cpp  memory.cpp  memory_model.cpp  mmio.c  mmio_wrapper.cpp  pipeline.cpp  read_tensors.cpp  relu.cpp  run_alzheimer.cpp  run_alzheimer_chunked.cpp  sage_convolution.cpp  (+4 more)
tests/: CMakeLists.txt  adam.cpp  adam.py  add.cpp  alzheimer.cpp  axpby.cpp  check_log_softmax.py  check_loss.py  check_loss_debug.py  compare.py  cuda_helper.cpp  cuda_version.cpp  divmv.cpp  dropout.cpp  dropout.py  dropout_chunked.py  elesq.cpp  feature_aggregation.cpp  feature_aggregation.py  graph_convolution.cpp  graph_convolution.py  helper.cpp  helper.hpp  helper.py  integration.cpp  integration.py  integration_chunked.cpp  integration_subset.cpp  integration_subset.py  integration_subset_chunked.cpp  invsqrt.cpp  layer.cpp  linear.cpp  linear.py  log_softmax.cpp  log_softmax.py  loss.cpp  loss.py  memory_model.cpp  pipeline.cpp  (+20 more)
